--- a/blog/templates/blog/blogs_with_type.html
+++ b/blog/templates/blog/blogs_with_type.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>{{ blog_type.type_name }}</title>
-</head>
-<body>
-	<div>
-		<a href="{% url 'home' %}">
-			<h3>个人博客网站</h3>
-		</a>		
-	</div>
-	<hr>
+{% extends 'base.html' %}
+
+{% block title %}
+    {{ blog_type.type_name }}
+{% endblock %}
+
+{% block nav_blog_active %}active{% endblock %}
+
+{% block content %}
 	<h3> {{ blog_type.type_name }} </h3>
 	{% for blog in blogs %}
 		<a href="{% url 'blog_detail' blog.pk %}">
@@ -22,5 +18,5 @@
 		<p>--暂无博客，敬请期待--</p>
 	{% endfor%}
 	<p>一共有{{ blogs|length }}篇博客</p>
-</body>
-</html>
+{% endblock %}
+
