--- a/blog/templates/blog/blogs_with_type.html
+++ b/blog/templates/blog/blogs_with_type.html
@@ -1,22 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'blog/blog_list.html' %}
 
-{% block title %}
-    {{ blog_type.type_name }}
+{% block title %}{{ blog_type.type_name }}{% endblock %}
+
+{% block blog_list_title %}
+	分类：{{ blog_type.type_name }} |
+	<a href="{% url 'blog_list' %}">  查看全部博客</a>
 {% endblock %}
-
-{% block nav_blog_active %}active{% endblock %}
-
-{% block content %}
-	<h3> {{ blog_type.type_name }} </h3>
-	{% for blog in blogs %}
-		<a href="{% url 'blog_detail' blog.pk %}">
-			<h3>{{ blog.title }}</h3>
-		</a>
-		
-		<p>{{ blog.content|truncatechars:30 }}</p>
-	{% empty %}
-		<p>--暂无博客，敬请期待--</p>
-	{% endfor%}
-	<p>一共有{{ blogs|length }}篇博客</p>
-{% endblock %}
-
