--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -16,9 +16,10 @@
                 <ul class="blog-info-description">                    
                     <li>作者：{{ blog.author }}</li>
                     <li>分类：<a href="{% url 'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type }}</a></li>
-                    <li>发表日期：{{ blog.created_time|date:"Y-m-d H:m:s" }}</li>                    
+                    <li>发表日期：{{ blog.created_time|date:"Y-m-d H:m:s" }}</li> 
+                    <li>阅读（{{ blog.get_read_num }}）</li>                   
                 </ul>
-                <div class="blog-content">{{ blog.content }}</div>
+                <div class="blog-content">{{ blog.content|safe }}</div>
                 <div class="blog-more">
                     <p>上一篇： 
                         {% if previous_blog %}
